--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 # YAML parser and emitter for Python
 # License: MIT
 # Upstream url: http://pyyaml.org/wiki/PyYAML
-PyYAML==5.4
+PyYAML==6.0.3
 
 # Boto3 is the Amazon Web Services (AWS) Software Development Kit (SDK)
 # for Python.
 # License: Apache2
 # Use: For KMS
-boto3==1.9.14
+boto3==1.40.40
 
 # Flask
 # License: BSD
 # Upstream url: http://github.com/mitsuhiko/flask/
 # Use: For API.
-Flask==1.0.2
+Flask==3.1.2
 
 # Python client for Docker.
 # License: Apache2
 # Upstream url: https://github.com/docker/docker-py/
-docker-py==1.10.6
+docker==7.1.0
 
 # The modular source code checker: pep8, pyflakes and co
 # License: MIT
 # Upstream url: http://bitbucket.org/tarek/flake8
-flake8==3.5.0
+flake8==7.3.0
 
 # Measures code coverage and emits coverage reports
 # Licence: BSD
 # Upstream url: https://pypi.python.org/pypi/coverage
-coverage==4.5.1
+coverage==7.10.7
 
 # tool to check your Python code against some of the style conventions
 # License: Expat License
@@ -43,14 +43,14 @@ nose==1.3.7
 # http requests made easy
 # License: Apache2
 # Upstream url: https://github.com/kennethreitz/requests
-requests==2.22.0
+requests==2.29.0
 
 # makes in memory caching easy
 # License: MIT
 # Upstream url: https://github.com/tkem/cachetools
-cachetools==3.1.1
+cachetools==6.2.0
 
 # Json Formatter for the standard python logger
 # Licence: BSD
 # Upstream url: https://github.com/madzak/python-json-logger
-python-json-logger==0.1.11
+python-json-logger==3.3.0
